tests/negative/ownership/field_after_move.tx
// Negative test: using object field after object is moved
// Expected: E0103 Use of moved variable

class Record {
    id: int32;
    name: string;
}

function main() {
    let rec = new Record();
    rec.id = 42;
    rec.name = "test";
    let rec2 = rec;      // rec moved via assignment
    print(rec.name);     // ERROR: rec already moved to rec2
}
